--- a/data_may/plot/figures.tex
+++ b/data_may/plot/figures.tex
@@ -24,7 +24,7 @@
 
 \begin{document}
 \noindent\textbf{\large Convergence Study---Numerical results}\\
-\textbf{DNO, $G[U]$}
+\textbf{DNO, $G[W]$}
 \begin{figure}[H]
 	\centering
 	\subfigure [DNO with $a=0.5$.] 
@@ -53,7 +53,7 @@
 \end{figure}
 
 \newpage
-\textbf{IIO, $I[U]$}
+\textbf{IIO, $Sw$}
 \begin{figure}[H]
 	\centering
 	\subfigure [IIO with $a=0.5$.] 
@@ -81,63 +81,63 @@
 		{fig_ErrrorVsEps_IIO_sing16.pdf}}
 \end{figure}
 
-\newpage
-\textbf{new IIO, $I[U]$, relative error}
-\begin{figure}[H]
-	\centering
-	\subfigure [new IIO with $a=0.5$.] 
-	{\includegraphics[width=0.4\textwidth]
-		{fig_ErrrorVsN_IIO_new.pdf}}
-	\quad
-	\subfigure [new IIO with $a=0.5$.] 
-	{\includegraphics[width=0.4\textwidth]
-		{fig_ErrrorVsEps_IIO_new.pdf}}
-	\\
-	\subfigure [new IIO with $a=1-10^{12}$.] 
-	{\includegraphics[width=0.4\textwidth]
-		{fig_ErrrorVsN_IIO_new_sing12.pdf}}
-	\quad
-	\subfigure [new IIO with $a=1-10^{12}$.] 
-	{\includegraphics[width=0.4\textwidth]
-		{fig_ErrrorVsEps_IIO_new_sing12.pdf}}
-	\\
-	\subfigure [new IIO with $a=1-10^{16}$.] 
-	{\includegraphics[width=0.4\textwidth]
-		{fig_ErrrorVsN_IIO_new_sing16.pdf}}
-	\quad
-	\subfigure [new IIO with $a=1-10^{16}$.] 
-	{\includegraphics[width=0.4\textwidth]
-		{fig_ErrrorVsEps_IIO_new_sing16.pdf}}
-\end{figure}
+%\newpage
+%\textbf{new IIO, $I[U]$, relative error}
+%\begin{figure}[H]
+%	\centering
+%	\subfigure [new IIO with $a=0.5$.] 
+%	{\includegraphics[width=0.4\textwidth]
+%		{fig_ErrrorVsN_IIO_new.pdf}}
+%	\quad
+%	\subfigure [new IIO with $a=0.5$.] 
+%	{\includegraphics[width=0.4\textwidth]
+%		{fig_ErrrorVsEps_IIO_new.pdf}}
+%	\\
+%	\subfigure [new IIO with $a=1-10^{12}$.] 
+%	{\includegraphics[width=0.4\textwidth]
+%		{fig_ErrrorVsN_IIO_new_sing12.pdf}}
+%	\quad
+%	\subfigure [new IIO with $a=1-10^{12}$.] 
+%	{\includegraphics[width=0.4\textwidth]
+%		{fig_ErrrorVsEps_IIO_new_sing12.pdf}}
+%	\\
+%	\subfigure [new IIO with $a=1-10^{16}$.] 
+%	{\includegraphics[width=0.4\textwidth]
+%		{fig_ErrrorVsN_IIO_new_sing16.pdf}}
+%	\quad
+%	\subfigure [new IIO with $a=1-10^{16}$.] 
+%	{\includegraphics[width=0.4\textwidth]
+%		{fig_ErrrorVsEps_IIO_new_sing16.pdf}}
+%\end{figure}
 
-\newpage
-\textbf{new IIO, $I[U]$, absolute error}
-\begin{figure}[H]
-	\centering
-	\subfigure [new IIO with $a=0.5$.] 
-	{\includegraphics[width=0.4\textwidth]
-		{fig_absErrrorVsN_IIO_new.pdf}}
-	\quad
-	\subfigure [new IIO with $a=0.5$.] 
-	{\includegraphics[width=0.4\textwidth]
-		{fig_absErrrorVsEps_IIO_new.pdf}}
-	\\
-	\subfigure [new IIO with $a=1-10^{12}$.] 
-	{\includegraphics[width=0.4\textwidth]
-		{fig_absErrrorVsN_IIO_new_sing12.pdf}}
-	\quad
-	\subfigure [new IIO with $a=1-10^{12}$.] 
-	{\includegraphics[width=0.4\textwidth]
-		{fig_absErrrorVsEps_IIO_new_sing12.pdf}}
-	\\
-	\subfigure [new IIO with $a=1-10^{16}$.] 
-	{\includegraphics[width=0.4\textwidth]
-		{fig_absErrrorVsN_IIO_new_sing16.pdf}}
-	\quad
-	\subfigure [new IIO with $a=1-10^{16}$.] 
-	{\includegraphics[width=0.4\textwidth]
-		{fig_absErrrorVsEps_IIO_new_sing16.pdf}}
-\end{figure}
+%\newpage
+%\textbf{new IIO, $I[U]$, absolute error}
+%\begin{figure}[H]
+%	\centering
+%	\subfigure [new IIO with $a=0.5$.] 
+%	{\includegraphics[width=0.4\textwidth]
+%		{fig_absErrrorVsN_IIO_new.pdf}}
+%	\quad
+%	\subfigure [new IIO with $a=0.5$.] 
+%	{\includegraphics[width=0.4\textwidth]
+%		{fig_absErrrorVsEps_IIO_new.pdf}}
+%	\\
+%	\subfigure [new IIO with $a=1-10^{12}$.] 
+%	{\includegraphics[width=0.4\textwidth]
+%		{fig_absErrrorVsN_IIO_new_sing12.pdf}}
+%	\quad
+%	\subfigure [new IIO with $a=1-10^{12}$.] 
+%	{\includegraphics[width=0.4\textwidth]
+%		{fig_absErrrorVsEps_IIO_new_sing12.pdf}}
+%	\\
+%	\subfigure [new IIO with $a=1-10^{16}$.] 
+%	{\includegraphics[width=0.4\textwidth]
+%		{fig_absErrrorVsN_IIO_new_sing16.pdf}}
+%	\quad
+%	\subfigure [new IIO with $a=1-10^{16}$.] 
+%	{\includegraphics[width=0.4\textwidth]
+%		{fig_absErrrorVsEps_IIO_new_sing16.pdf}}
+%\end{figure}
 
 \end{document}
 
